加入视频测试

--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -51,7 +51,7 @@ $(function(){
 
     $(function () {
         //这里是为了方便测试的模拟事件代码，正式使用时请蔽掉
-//        $("#l").find(".flat-footer .legend ul.legend-bottom li:eq(0) a").click()
+        $("#l").find(".flat-footer .legend ul.legend-bottom li:eq(0) a").click()
 //        $("#r .box:eq(0)").addClass("selected").siblings().removeClass("selected");
 //        resetSizeRight();
     	
