加入海尔智能家居

--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -54,7 +54,7 @@ $(function(){
 //        $("#l").find(".flat-footer .legend ul.legend-bottom li:eq(0) a").click()
 //        $("#l").find(".toLabData").click()
 //        $("#r .box:eq(0)").addClass("selected").siblings().removeClass("selected");
-        $("#r .tab>ul>li:eq(2)").click();
+//        $("#r .tab>ul>li:eq(2)").click();
 //        resetSizeRight();
     	
     })
