--- a/src/main/webapp/WEB-INF/pages/test/hello.html
+++ b/src/main/webapp/WEB-INF/pages/test/hello.html
@@ -92,7 +92,7 @@
             params,
             attrs,
             function () {
-                alert(1)
+//                alert(1)
             }
         )
     }
