--- a/src/main/webapp/WEB-INF/pages/test/testSelected.html
+++ b/src/main/webapp/WEB-INF/pages/test/testSelected.html
@@ -7,6 +7,19 @@
         body{
             background-color: skyblue;
         }
+        .testAfter:before,
+        button:before,
+        select:before{
+            content: "";
+            position: absolute;
+            width: 0;
+            height: 0;
+            border-top: 12px solid #bdecf8;
+            border-left: 12px solid transparent;
+            border-right: 12px solid transparent;
+            top: 20px;
+            left: 35%;
+        }
     </style>
 </head>
 <body>
@@ -25,6 +38,11 @@
         <option value="怀化市2">怀化市</option>
     </optgroup>
 </select>
+<!--<div class="testAfter">testAfter</div>-->
+<label class="testAfter">label</label>
+<hr>
+<select name="" id="">123</select>
+<button>anniu</button>
 <script src="../../../static/asserts/js/jquery-2.2.4.js"></script>
 <script>
     $(function () {
