重新修改实验室结构动作

--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -51,7 +51,7 @@ $(function(){
 
     $(function () {
         //这里是为了方便测试的模拟事件代码，正式使用时请蔽掉
-//        $("#l").find(".toLabData").click()
+        $("#l").find(".toLabData").click()
 //        $("#r .tab>ul>li:eq(2)").click();
 //        resetSizeRight();
     	
