陈新 最新成果

--- a/src/main/webapp/WEB-INF/pages/phm/service.html
+++ b/src/main/webapp/WEB-INF/pages/phm/service.html
@@ -18,7 +18,7 @@
 			<!--head-->
 			<div id="head">
 				<h1>
-					<a href="index.html">
+					<a href="${contextPath}/deviceInfo/strategy">
 						<img src="${contextPath}/static/phm/images/index/logo_haier_bold.png" alt="" />
 					</a>
 				</h1>
