--- a/src/main/webapp/WEB-INF/pages/phm/service.html
+++ b/src/main/webapp/WEB-INF/pages/phm/service.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -18,7 +19,7 @@
 			<!--head-->
 			<div id="head">
 				<h1>
-					<a href="index.html">
+					<a href="${contextPath}/deviceInfo/strategy">
 						<img src="${contextPath}/static/phm/images/index/logo_haier_bold.png" alt="" />
 					</a>
 				</h1>
@@ -31,6 +32,7 @@
 					<div class="title">压缩机故障详情</div>
 					
 					<div class="btnBox">
+
 						<div class="optionsBtn" onclick="showByFobject(this)" >主控板</div>
 						<div class="optionsBtn" onclick="showByFobject(this)" >显示屏</div>
 						<div class="optionsBtn" onclick="showByFobject(this)">压缩机</div>
