--- a/src/main/webapp/WEB-INF/pages/test/hello.html
+++ b/src/main/webapp/WEB-INF/pages/test/hello.html
@@ -49,6 +49,13 @@
     <div class="pic">4</div>
     <div class="pic">5</div>
     <div class="pic">6</div>
+    <div class="pic">7</div>
+    <div class="pic">8</div>
+    <div class="pic">8</div>
+    <div class="pic">8</div>
+    <div class="pic">8</div>
+    <div class="pic">8</div>
+    <div class="pic">8</div>
 </div>
 <div class="videoBox">
     <button class="close">返回</button>
