--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -14,6 +14,7 @@
 <script src="${contextPath!}/static/asserts/echarts/wordcloudFromNet.js?time=New Date()"></script>
 <script>
     var fromPage='${fromPage!}';
+   // document.domain="10.130.96.65";
 </script>
 <script src="${contextPath!}/static/js/full.js"></script>
 <script src="${contextPath!}/static/js/full_statistics.js"></script>
