--- a/src/main/webapp/WEB-INF/pages/phm/health.html
+++ b/src/main/webapp/WEB-INF/pages/phm/health.html
@@ -14,7 +14,7 @@
 			<!--head-->
 			<div id="head">
 				<h1>
-					<a href="service.html">
+					<a href="${contextPath}/fault/service">
 						<img src="${contextPath}/static/phm/images/health/logo_haier_bold.png" alt="" />
 					</a>
 				</h1>
