--- a/src/main/webapp/WEB-INF/pages/phm/status.html
+++ b/src/main/webapp/WEB-INF/pages/phm/status.html
@@ -16,7 +16,7 @@
 			<!--head-->
 			<div id="head">
 				<h1>
-					<a href="${contextPath}/fault/service">
+					<a href="${contextPath}/health/health">
 						<img src="${contextPath}/static/phm/images/status/logo_haier_bold.png" alt="" />
 					</a>
 				</h1>
