--- a/src/main/webapp/WEB-INF/pages/phm/strategy.html
+++ b/src/main/webapp/WEB-INF/pages/phm/strategy.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<meta name="PHW" content="phw二期"/>
+		<meta name="PHM" content="phm二期"/>
 		<title>保证期</title>
 		<link rel="stylesheet" href="${contextPath}/static/phm/css/common.css" />
 		<link rel="stylesheet" href="${contextPath}/static/phm/css/strategy.css" />
@@ -20,7 +20,7 @@
 				<!--bottom-left-->
 				<div class="effectIntro">
 					<div class="cloudData">
-						<h3>云数据互联互通</h3>
+						<h3>产品不坏保证期</h3>
 						<div class="infoBox">
 							<div class="info">
 								<div class="imgbox">
@@ -46,7 +46,7 @@
 						</div>
 					</div>
 					<div class="intelligent">
-						<h3>PHM智能自诊断</h3>
+						<h3>云数据互联互通</h3>
 						<div class="dataCenter">
 							<div class="topdata">
 								<div class="itleft it">
@@ -103,19 +103,19 @@
 						</div>
 						
 					</div>
-					<p class="info"><a href="${contextPath}/deviceStatus/status" style="color:#fff;">颠覆传统行业保修期&nbsp;&nbsp;首创产品不坏保证期</a></p>
+					<p class="info">颠覆传统行业保修期&nbsp;&nbsp;首创产品不坏保证期</p>
 				</div>
 				<!--bottom right-->
 				<div class="period">
-					<h4>产品不坏保证期</h4>
+					<h4><a href="${contextPath}/deviceStatus/status" style="color:#64ccff;width:100%;display:block">PHM智能自诊断</a></h4>
 					<div class="modebox">
 						<div class="leftmode mode">
 							<h5>模块诊断预测模型</h5>
-							<img src="${contextPath}/static/phm/images/strategy/mod.png" alt="" />
+							<img src="${contextPath}/static/phm/images/strategy/mod_1.png" alt="" />
 						</div>
 						<div class="rightmode mode">
 							<h5>整机诊断预测模型</h5>
-							<img src="${contextPath}/static/phm/images/strategy/mac.png" alt="" />
+							<img src="${contextPath}/static/phm/images/strategy/mac_1.png" alt="" />
 						</div>
 					</div>
 					<div class="line">
