--- a/src/main/webapp/WEB-INF/pages/phm/status.html
+++ b/src/main/webapp/WEB-INF/pages/phm/status.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<meta name="PHW" content="phw二期"/>
+		<meta name="PHM" content="phm二期"/>
 		<title>实时状态</title>
 		
 		<link rel="stylesheet" href="${contextPath}/static/phm/css/common.css" />
@@ -16,7 +16,7 @@
 			<!--head-->
 			<div id="head">
 				<h1>
-					<a href="${contextPath}/health/health">
+					<a href="#">
 						<img src="${contextPath}/static/phm/images/status/logo_haier_bold.png" alt="" />
 					</a>
 				</h1>
@@ -26,12 +26,21 @@
 			<div id="bottom">
 				<!--bottom left-->
 				<div class="map-mod">
+					<div class="mapTitle">
+						<a href="${contextPath}/health/health">全球冰箱分布</a>
+					</div>
 					<div id="myMap" style="width:100%;height:100%"></div>
 				</div>
 				<!--bottom bxbox-->
 				<div class="bxbox">
-					<div class="circle"></div>
-					<div class="light"></div>
+					<div class="circle">
+						<!-- <div id="container">
+						    <canvas id="circleBox"></canvas>
+						</div> -->
+						<iframe id="light-if" width="100%" height="100%" frameborder="0" src=""></iframe>
+					</div>
+					<div class="light light1"></div>
+					<div class="light light2"></div>
 					<div class="piontline"></div>
 					<div class="view center-block mybx">
 			            <div class="box">
@@ -550,7 +559,7 @@
 									 myarr[0]=["liquid"+times,max,min,actualStatus,"℃"];
 									 Status.liquidMove(myarr);
 								}if(type=="speedometer"){
-									debugger;
+									//debugger;
 									times+=1;
 									charts+=
 										"<div id='cx"+times+"' class='jtState "+changeClass+"'>"+
@@ -563,7 +572,7 @@
 										var zs;
 									speedometer(zs,actualStatus,times,max,min,title,label);
 								}else if(type=="gauge"){
-									debugger;
+									//debugger;
 									times+=1;
 									charts+=
 										"<div id='cx"+times+"'  class='jtState "+changeClass+"'>"+
@@ -932,7 +941,7 @@
 						$("#address").html(good[0].name);
 						$("#status").html(good[0].status);
 						
-						Status.delayIframe(sncode);
+						//Status.delayIframe(sncode);
 						//document.getElementById("video").src="${contextPath}/static/phm/"+good[0].image;
 					
 						//var arr=[ [{name:good[0].name},{name:'基线'}] ];
@@ -1134,7 +1143,7 @@
 										"</div>";
 									//"</div>";
 						//	var option=optionArray[times].zsOption;
-							console.log(optionArray);
+							//console.log(optionArray);
 						//	 option.series[0].data[0].value =(Math.random()*10).toFixed(2);
 							 var zs =optionArray[times];
 							// zs.setOption(option, true);
