--- a/src/main/webapp/WEB-INF/pages/phm/status.html
+++ b/src/main/webapp/WEB-INF/pages/phm/status.html
@@ -86,7 +86,7 @@
 						<div class="tnav sszt navActive" onclick="timeStatusChange()">实时状态</div>
 						<div class="tnav ztqs">状态趋势</div>
 						<div class="tnav gzzd">故障诊断</div>
-						<div class="tnav gzyc">故障预测</div>
+						<div class="tnav gzyc">寿命预测</div>
 					</div>
 					<div class="bottomState">
 						<div class="state-box-contain">
