修改了状态趋势tab页

--- a/src/main/webapp/WEB-INF/pages/phm/health.html
+++ b/src/main/webapp/WEB-INF/pages/phm/health.html
@@ -98,7 +98,7 @@
 							</div>
 						</div>
 						<div class="ydqk">
-							<h5><a href="${contextPath}/phm/service" style="color:#fff">应对情况</a></h5>
+							<h5><a href="${contextPath}/phm/service" style="color:#fff;display:block;width:100%;height:100%">应对情况</a></h5>
 							<div class="picBox1">
 								<div id="ydqk" style="width:100%;height: 100%;"></div>
 							</div>
