--- a/src/main/webapp/WEB-INF/pages/phm/service.html
+++ b/src/main/webapp/WEB-INF/pages/phm/service.html
@@ -34,8 +34,8 @@
 					<div class="btnBox">
 
 						<div class="optionsBtn" onclick="showByFobject(this)" >主控板</div>
-						<div class="optionsBtn" onclick="showByFobject(this)" >显示屏</div>
-						<div class="optionsBtn" onclick="showByFobject(this)">压缩机</div>
+						<div class="optionsBtn" onclick="showByFobject(this)" >冷藏风机</div>
+						<div class="optionsBtn" onclick="showByFobject(this)">电磁阀</div>
 						
 					</div>
 					<table border="0" cellpadding="0" cellspacing="0" align="center">
