--- a/src/main/webapp/WEB-INF/pages/phm/strategy.html
+++ b/src/main/webapp/WEB-INF/pages/phm/strategy.html
@@ -92,14 +92,14 @@
 						<div class="rotatebox rot2"></div>
 						<div class="circle">
 							<p class="text1">PHM智能自诊断</p>
-							<p class="text2">PHM Intelligent Self-Diagnosis</p>
+							<p class="text2">Prognostic and Health Management</p>
 						</div>
 						
 						<div class="arrow"></div>
 						<div class="rotatebox rot3"></div>
 						<div class="circle">
 							<p class="text1">产品不坏保证期</p>
-							<p class="text2">Never Break Down In Warranty Period</p>
+							<p class="text2">Maintenance Free Operating Period，MFOP</p>
 						</div>
 						
 					</div>
