--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>展开的平面地图</title>
+    <base target="_blank">
     <link rel="stylesheet" href="${contextPath!}/static/css/flatMapAutoTip.css">
     <style>
         html, body {
