--- a/src/main/webapp/WEB-INF/pages/phm/status.html
+++ b/src/main/webapp/WEB-INF/pages/phm/status.html
@@ -37,7 +37,7 @@
 						<!-- <div id="container">
 						    <canvas id="circleBox"></canvas>
 						</div> -->
-						<iframe id="light-if" width="100%" height="100%" frameborder="0" src=""></iframe>
+						<iframe id="light-if" width="100%" height="100%" frameborder="0" src="" scrolling="no"></iframe>
 					</div>
 					<div class="light light1"></div>
 					<div class="light light2"></div>
