--- a/src/main/webapp/WEB-INF/pages/phm/health.html
+++ b/src/main/webapp/WEB-INF/pages/phm/health.html
@@ -144,7 +144,8 @@
 		
 			$(function(){
 				$.ajax({
-					url:"http://localhost:8088/api/yzd/survey/all",
+					//url:"http://localhost:8088/api/yzd/survey/all",
+					url:"http://10.138.87.129/api/yzd/survey/all",
 					type:"get",
 					success:function(data){
 						var total=data.linkNum;//接入量
