--- a/src/main/webapp/WEB-INF/pages/phm/status.html
+++ b/src/main/webapp/WEB-INF/pages/phm/status.html
@@ -386,8 +386,8 @@
 				}
 				
 				$.ajax({
-					url:"http://localhost:8088/api/yzd/product/"+sncode,
-					//url:"http://47.95.109.158/api/yzd/product/"+sncode,
+					//url:"http://localhost:8088/api/yzd/product/"+sncode,
+					url:"http://10.138.87.129/api/yzd/product/"+sncode,
 					type:"get",
 					success:function(data){
 						//console.log(data.monitorConf)
