--- a/src/main/webapp/WEB-INF/pages/admin/mapForm.html
+++ b/src/main/webapp/WEB-INF/pages/admin/mapForm.html
@@ -18,14 +18,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index.html" class="navbar-brand">Ulab数据管理平台</a>
+            <a href="${contextPath}/admin/mapList" class="navbar-brand">Ulab数据管理平台</a>
         </div>
         <!--小屏幕按钮和-->
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span>平面地图数据</a></li>
-                <li><a href=""><span class="glyphicon glyphicon-home"></span>实验室明细</a></li>
-                <li><a href=""><span class="glyphicon glyphicon-home"></span>账号管理</a></li>
+               <li class="active"><a href="${contextPath}/admin/mapList"><span class="glyphicon glyphicon-home"></span>平面地图数据</a></li>
+                <li ><a href="${contextPath}/admin/labInfoList"><span class="glyphicon glyphicon-home"></span>实验室明细</a></li>
+                <li><a href="${contextPath}/admin/userList"><span class="glyphicon glyphicon-home"></span>账号管理</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
