--- a/src/main/webapp/WEB-INF/pages/admin/mapList.html
+++ b/src/main/webapp/WEB-INF/pages/admin/mapList.html
@@ -18,7 +18,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index.html" class="navbar-brand">Ulab数据管理平台</a>
+            <a href="${contextPath}/admin/mapList" class="navbar-brand">Ulab数据管理平台</a>
         </div>
         <!--小屏幕按钮和-->
         <div class="navbar-collapse collapse">
